k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopper-api-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: shopper-api
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: shopper-api
    spec:
      containers:
        - name: shopper-api
          image: arturyumaev/public:shopper-api
          ports:
            - containerPort: 8080
