k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopper-api-service
spec:
  selector:
    app: shopper-api
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  type: NodePort
